BugzId:50 - wrap developer details in a pretty box; fix up list

--- a/gooey-cms/gooeycms.control.webrole/css/admin-theme.css
+++ b/gooey-cms/gooeycms.control.webrole/css/admin-theme.css
@@ -412,6 +412,19 @@ ul.flat li {
 }
 
 
+div.nice-box {
+    -moz-border-radius:5px 5px 5px 5px;
+    -moz-box-shadow:0 1px 2px rgba(0, 0, 0, 0.2);
+    background-color: #fff;
+    border-color:#F5F5F5 #E1E1E1 #C4C4C4;
+    border-left:1px solid #E1E1E1;
+    border-right:1px solid #E1E1E1;
+    border-style:solid;
+    border-width:1px;
+    margin-bottom:1.6em;
+    padding: 10px;
+}
+
 /*******    UTILITIES **********
 */
 
